--- a/404.html
+++ b/404.html
@@ -63,6 +63,6 @@ button{
 </body> --->
 <body>
 <div>
-   <h1>Aarush Magic Periodic Table - 404 Error</h1>
-   <p>Sorry, the page you have searched for does not exist under the Aarush Magic Periodic Table. If you have typed in an element name, the page for this element is still under construction. So please come back later. Click below to return to home screen.</p>
+   <h1>Aarush Magic Periodic Table<br>404 Error</h1>
+   <p>Sorry, the page you have searched for does not exist. Click below to return to Home.</p>
    <button onclick="window.location.href='./index.html'">Return</button> </div></body>
