--- a/404.html
+++ b/404.html
@@ -65,4 +65,4 @@ button{
 <div>
    <h1>Aarush Magic Periodic Table<br>404 Error</h1>
    <p>Sorry, the page you have searched for does not exist. Click below to return to Home.</p>
-   <button onclick="window.location.href='./index.html'">Return</button> </div></body>
+   <button onclick="window.location.href='https://chemistry.aarushmagic.com'">Return</button> </div></body>
