--- a/elements/nickel.html
+++ b/elements/nickel.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-  <img src="./images/Screenshot 2021-09-25 3.53.53 PM.png">
+  <img src="./images/nickel.png">
   <p id="title"><b>
     Nickel (Ni)
     </b></p>
